minor changes to the mobile view

--- a/adynamics3/testComponents/cource-aboutpage.html
+++ b/adynamics3/testComponents/cource-aboutpage.html
@@ -32,37 +32,37 @@
 </head>
 
 <body>
-      <!-- Topbar Start -->
-  <div class="container-fluid bg-dark text-light p-0">
-    <div class="row gx-0 d-none d-lg-flex">
-      <div class="col-lg-7 px-5 text-start">
-        <div class="h-100 d-inline-flex align-items-center me-4">
-          <small class="fa fa-map-marker-alt text-primary me-2"></small>
-          <small>Bengaluru, Karanataka, India</small>
+    <!-- Topbar Start -->
+    <div class="container-fluid bg-dark text-light p-0">
+        <div class="row gx-0 d-none d-lg-flex">
+            <div class="col-lg-7 px-5 text-start">
+                <div class="h-100 d-inline-flex align-items-center me-4">
+                    <small class="fa fa-map-marker-alt text-primary me-2"></small>
+                    <small>Bengaluru, Karanataka, India</small>
+                </div>
+                <div class="h-100 d-inline-flex align-items-center">
+                    <small class="far fa-clock text-primary me-2"></small>
+                    <small>himanshu@adynamics.in </small>
+                </div>
+            </div>
+            <div class="col-lg-5 px-5 text-end">
+                <div class="h-100 d-inline-flex align-items-center me-4">
+                    <small class="fa fa-phone-alt text-primary me-2"></small>
+                    <small>+91-8296076136</small>
+                </div>
+                <div class="h-100 d-inline-flex align-items-center mx-n2">
+                    <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" href=""><i
+                            class="fab fa-facebook-f" style="font-size: 20px; color: #fff;"></i></a>
+                    <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" href=""><i
+                            class="fab fa-twitter" style="font-size: 20px;"></i></a>
+                    <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" href=""><i
+                            class="fab fa-linkedin-in" style="font-size: 20px; color:#fff"></i></a>
+                    <a class="btn btn-square btn-link rounded-0" href=""><i class="fab fa-instagram"></i></a>
+                </div>
+            </div>
         </div>
-        <div class="h-100 d-inline-flex align-items-center">
-          <small class="far fa-clock text-primary me-2"></small>
-          <small>himanshu@adynamics.in </small>
-        </div>
-      </div>
-      <div class="col-lg-5 px-5 text-end">
-        <div class="h-100 d-inline-flex align-items-center me-4">
-          <small class="fa fa-phone-alt text-primary me-2"></small>
-          <small>+91-8296076136</small>
-        </div>
-        <div class="h-100 d-inline-flex align-items-center mx-n2">
-          <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" href=""><i
-              class="fab fa-facebook-f" style="font-size: 20px; color: #fff;"></i></a>
-          <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" href=""><i
-              class="fab fa-twitter" style="font-size: 20px;"></i></a>
-          <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" href=""><i
-              class="fab fa-linkedin-in" style="font-size: 20px; color:#fff"></i></a>
-          <a class="btn btn-square btn-link rounded-0" href=""><i class="fab fa-instagram"></i></a>
-        </div>
-      </div>
     </div>
-  </div>
-  <!-- Topbar End -->
+    <!-- Topbar End -->
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
         <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
@@ -809,68 +809,54 @@
     </div>
 
     <div class="mobile-view">
-        <div class="south__africa">
-            <div class="col-lg-6 col-md-6" data-wow-delay="0.3s">
-                <div class="courses-item d-flex flex-column flex-xl-row arc-shadow overflow-hidden h-100">
-                    <div class="text-center p-4">
-                        <h5 class="mb-3 mt-2 mt-xl-1">CPL Training in South Africa</h5>
-                        <p>
 
-                            Many aspiring pilots worldwide choose of its excellent aviation infrastructure and training
-                            facilities.
-                        </p>
-                        <ol class="breadcrumb justify-content-center mb-0">
-                            <li class="breadcrumb-item small">
-                                <i class="fa fa-signal text-primary me-2"></i>Beginner
-                            </li>
-                            <li class="breadcrumb-item small">
-                                <i class="fa fa-calendar-alt text-primary me-2"></i>3 Week
-                            </li>
-                        </ol>
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="../assets/img/us.svg" class="d-block w-100" alt="...">
+                    <div
+                        class="carousel-caption d-flex flex-column h-100 align-items-center justify-content-center bottom-0">
+                        <h2 class="bg-opacity-50 py-2 px-4">CPL Training in USA</h2>
+                        <p class="bg-opacity-50 py-2 px-4"> Many aspiring pilots worldwide choose of its
+                            excellent aviation infrastructure and training
+                            facilities.</p>
+                        <a href="../inidvidual-clases/cpltaring.html"
+                            class="btn btn-outline-dark px-4 py-2 rounded-0">Learn More</a>
                     </div>
-                    <div class="position-relative mt-auto p-4 pt-0 pt-lg-4">
-                        <img class="img-fluid border-r10" src="../img/flying_southafrica.png" alt="" />
-                        <div class="courses-overlay">
-                            <a class="btn btn-outline-primary border-2 courses-btn-bg"
-                                href="../inidvidual-clases/cplsouth.html">Read More</a>
-                        </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="../assets/img/Doodle_Map_of_South_Africa_With_States_generated.jpg" class="d-block w-100"
+                        alt="...">
+                    <div
+                        class="carousel-caption d-flex flex-column h-100 align-items-center justify-content-center bottom-0 ">
+                        <h2 class="bg-opacity-50 py-2 px-4">CPL Training in South Africa</h2>
+                        <p class="bg-opacity-50 py-2 px-4">Some representative placeholder content for the second slide.</p>
+                        <a href="../inidvidual-clases/cplsouth.html" class="btn btn-outline-dark px-4 py-2 rounded-0">Learn More</a>
                     </div>
                 </div>
             </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
-
-        <div class="USA">
-            <div class="col-lg-6 col-md-6" data-wow-delay="0.1s">
-                <div class="courses-item d-flex flex-column flex-xl-row arc-shadow overflow-hidden h-100">
-                    <div class="text-center p-4">
-                        <h5 class="mb-3 mt-2 mt-xl-1">
-                            CPL Training in USA</h5>
-                        <p>
-                            Demanding program intended to ready individuals for a professional pilot career.
-                        </p>
-                        <ol class="breadcrumb justify-content-center mb-0">
-                            <li class="breadcrumb-item small">
-                                <i class="fa fa-signal text-primary me-2"></i>Beginner
-                            </li>
-                            <li class="breadcrumb-item small">
-                                <i class="fa fa-calendar-alt text-primary me-2"></i>3 Week
-                            </li>
-                        </ol>
-                    </div>
-                    <div class="position-relative mt-auto p-4 pt-0 pt-lg-4">
-                        <img class="img-fluid border-r10" src="../img/flying_cpltraing.png" alt="" />
-                        <div class="courses-overlay">
-                            <a class="btn btn-outline-primary border-2 courses-btn-bg"
-                                href="../inidvidual-clases/cpltaring.html">Read More</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
     </div>
 
-    
+
     </div>
 
 
@@ -924,70 +910,75 @@
     </section>
     <!-- demo-class end -->
 
-  <!-- Footer Start -->
-  <footer class="new_footer_area bg_color">
-    <div class="new_footer_top">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-3 col-md-6">
-                    <div class="f_widget company_widget wow fadeInLeft" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInLeft;">
-                        <h3 class="f-title f_600 t_color f_size_18">Get in Touch</h3>
-                        <p>Don’t miss any updates of our new templates and extensions.!</p>
-                        <form action="#" class="f_subscribe_two mailchimp" method="post" novalidate="true" _lpchecked="1">
-                            <input type="text" name="EMAIL" class="form-control memail" placeholder="Email">
-                            <button class="btn btn_get btn_get_two" type="submit">Subscribe</button>
-                            <p class="mchimp-errmessage" style="display: none;"></p>
-                            <p class="mchimp-sucmessage" style="display: none;"></p>
-                        </form>
+    <!-- Footer Start -->
+    <footer class="new_footer_area bg_color">
+        <div class="new_footer_top">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-3 col-md-6">
+                        <div class="f_widget company_widget wow fadeInLeft" data-wow-delay="0.2s"
+                            style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInLeft;">
+                            <h3 class="f-title f_600 t_color f_size_18">Get in Touch</h3>
+                            <p>Don’t miss any updates of our new templates and extensions.!</p>
+                            <form action="#" class="f_subscribe_two mailchimp" method="post" novalidate="true"
+                                _lpchecked="1">
+                                <input type="text" name="EMAIL" class="form-control memail" placeholder="Email">
+                                <button class="btn btn_get btn_get_two" type="submit">Subscribe</button>
+                                <p class="mchimp-errmessage" style="display: none;"></p>
+                                <p class="mchimp-sucmessage" style="display: none;"></p>
+                            </form>
+                        </div>
                     </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <div class="f_widget about-widget pl_70 wow fadeInLeft" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInLeft;">
-                        <h3 class="f-title f_600 t_color f_size_18">Download</h3>
-                        <ul class="list-unstyled f_list">
-                            <li><a href="#">Company</a></li>
-                            <li><a href="#">Android App</a></li>
-                            <li><a href="#">ios App</a></li>
-                            <li><a href="#">Desktop</a></li>
-                            <li><a href="#">Projects</a></li>
-                            <li><a href="#">My tasks</a></li>
-                        </ul>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="f_widget about-widget pl_70 wow fadeInLeft" data-wow-delay="0.4s"
+                            style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInLeft;">
+                            <h3 class="f-title f_600 t_color f_size_18">Download</h3>
+                            <ul class="list-unstyled f_list">
+                                <li><a href="#">Company</a></li>
+                                <li><a href="#">Android App</a></li>
+                                <li><a href="#">ios App</a></li>
+                                <li><a href="#">Desktop</a></li>
+                                <li><a href="#">Projects</a></li>
+                                <li><a href="#">My tasks</a></li>
+                            </ul>
+                        </div>
                     </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <div class="f_widget about-widget pl_70 wow fadeInLeft" data-wow-delay="0.6s" style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInLeft;">
-                        <h3 class="f-title f_600 t_color f_size_18">Help</h3>
-                        <ul class="list-unstyled f_list">
-                            <li><a href="#">FAQ</a></li>
-                            <li><a href="#">Term &amp; conditions</a></li>
-                            <li><a href="#">Reporting</a></li>
-                            <li><a href="#">Documentation</a></li>
-                            <li><a href="#">Support Policy</a></li>
-                            <li><a href="#">Privacy</a></li>
-                        </ul>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="f_widget about-widget pl_70 wow fadeInLeft" data-wow-delay="0.6s"
+                            style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInLeft;">
+                            <h3 class="f-title f_600 t_color f_size_18">Help</h3>
+                            <ul class="list-unstyled f_list">
+                                <li><a href="#">FAQ</a></li>
+                                <li><a href="#">Term &amp; conditions</a></li>
+                                <li><a href="#">Reporting</a></li>
+                                <li><a href="#">Documentation</a></li>
+                                <li><a href="#">Support Policy</a></li>
+                                <li><a href="#">Privacy</a></li>
+                            </ul>
+                        </div>
                     </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <div class="f_widget social-widget pl_70 wow fadeInLeft" data-wow-delay="0.8s" style="visibility: visible; animation-delay: 0.8s; animation-name: fadeInLeft;">
-                        <h3 class="f-title f_600 t_color f_size_18">Team Solutions</h3>
-                        <div class="f_social_icon">
-                            <a href="#" class="fab fa-facebook"></a>
-                            <a href="#" class="fab fa-twitter"></a>
-                            <a href="#" class="fab fa-linkedin"></a>
-                            <a href="#" class="fab fa-pinterest"></a>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="f_widget social-widget pl_70 wow fadeInLeft" data-wow-delay="0.8s"
+                            style="visibility: visible; animation-delay: 0.8s; animation-name: fadeInLeft;">
+                            <h3 class="f-title f_600 t_color f_size_18">Team Solutions</h3>
+                            <div class="f_social_icon">
+                                <a href="#" class="fab fa-facebook"></a>
+                                <a href="#" class="fab fa-twitter"></a>
+                                <a href="#" class="fab fa-linkedin"></a>
+                                <a href="#" class="fab fa-pinterest"></a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
+            <div class="footer_bg">
+                <div class="footer_bg_one"></div>
+                <div class="footer_bg_two"></div>
+            </div>
         </div>
-        <div class="footer_bg">
-            <div class="footer_bg_one"></div>
-            <div class="footer_bg_two"></div>
-        </div>
-    </div>
-    
-</footer>
-  <!-- Footer End -->
+
+    </footer>
+    <!-- Footer End -->
 
 
     <!-- Back to Top -->
