--- a/adynamics3/jj.html
+++ b/adynamics3/jj.html
@@ -144,7 +144,7 @@
   </div>
 
   <div class="demo-class">
-    <iframe src="https://www.youtube.com/embed/xy8aJw1vYHo?si=blalHI8GgNen-Csp&enablejsapi=1" id="player"
+    <iframe src="https://www.youtube.com/embed/lKr-EdxFhnM?si=rVfbLDS_tgJVAEvE" id="player"
       title="YouTube video player" frameborder="0"
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
       referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
