--- a/adynamics3/testComponents/cource-aboutpage.html
+++ b/adynamics3/testComponents/cource-aboutpage.html
@@ -810,19 +810,11 @@
     <div class="mobile-view">
 
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-                    aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                    aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                    aria-label="Slide 3"></button>
-            </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="../assets/img/us.svg" class="d-block w-100" alt="...">
+                    <img src="../assets/img/hollywood-sign-grainy-hd-v75tqeuilgi7q0a9.jpg" class="d-block w-100" alt="...">
                     <div
-                        class="carousel-caption d-flex flex-column h-100 align-items-center justify-content-center bottom-0">
+                        class="carousel-caption d-flex flex-column align-items-center justify-content-center bottom-0">
                         <h2 class="bg-opacity-50 py-2 px-4">CPL Training in USA</h2>
                         <p class="bg-opacity-50 py-2 px-4"> Many aspiring pilots worldwide choose of its
                             excellent aviation infrastructure and training
@@ -832,10 +824,10 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="../assets/img/Doodle_Map_of_South_Africa_With_States_generated.jpg" class="d-block w-100"
+                    <img src="../assets/img/south-africa-1755-x-1080-picture-515wwhor3xxnbfvq (1).jpg" class="d-block w-100"
                         alt="...">
                     <div
-                        class="carousel-caption d-flex flex-column h-100 align-items-center justify-content-center bottom-0 ">
+                        class="carousel-caption d-flex flex-column align-items-center justify-content-center bottom-0 ">
                         <h2 class="bg-opacity-50 py-2 px-4">CPL Training in South Africa</h2>
                         <p class="bg-opacity-50 py-2 px-4">Some representative placeholder content for the second slide.</p>
                         <a href="../inidvidual-clases/cplsouth.html" class="btn btn-outline-dark px-4 py-2 rounded-0">Learn More</a>
