--- a/adynamics3/jj.html
+++ b/adynamics3/jj.html
@@ -157,11 +157,11 @@
       <div class="col-lg-7 px-5 text-start">
         <div class="h-100 d-inline-flex align-items-center me-4">
           <small class="fa fa-map-marker-alt text-primary me-2"></small>
-          <small>Bengaluru, Karanataka, India</small>
+          <small>Office No.3 , 2nd floor, SNN Raj Pinnacle, Whitefield, Bengaluru, Karnataka 560048</small>
         </div>
         <div class="h-100 d-inline-flex align-items-center">
           <small class="far fa-clock text-primary me-2"></small>
-          <small>himanshu@adynamics.in </small>
+          <small>info@adynamics.in </small>
         </div>
       </div>
       <div class="col-lg-5 px-5 text-end">
@@ -259,7 +259,7 @@
       </div>
 
       <figure class="has-before hero-banner" style="--width: 650; --height: 650; margin-left: 40px;">
-        <img src="./img/hero-pilot.jpg" width="400px" height="100px" alt="hero banner" class="img-cover  hero-banner"
+        <img src="./img/check.jpg" width="400px" height="100px" alt="hero banner" class="img-cover  hero-banner"
           style="border-radius: 50%; width: 100%; ">
       </figure>
 
@@ -388,8 +388,7 @@
 
                       <div class="timeline-text">
                         <h6> Meet the Eligibility Criteria</h6>
-                        <p>Age: 17+, 10+2 completion with ≥50% in physics and maths, valid DGCA Class 1 or 2 medical
-                          certificate.</p>
+                        <p>Age:18, 12th Std complete with Math and Physics.</p>
                       </div>
                     </div>
                   </div>
@@ -409,9 +408,8 @@
                       style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInLeft;">
 
                       <div class="timeline-text">
-                        <h6>Choose Flying School</h6>
-                        <p>Research approved DGCA flying schools in India, compare facilities, course duration, and fees
-                          for informed decision.</p>
+                        <h6>Choose Ground School</h6>
+                        <p>Research and choose appropriate ground schools with pilots as instructors.</p>
                       </div>
                     </div>
                   </div>
@@ -432,9 +430,8 @@
                       style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInLeft;">
 
                       <div class="timeline-text">
-                        <h6>Enrol in a Pilot Training Course</h6>
-                        <p>Enroll in pilot training course at selected school, covering ground, flight, and simulator
-                          training; duration varies by license type.</p>
+                        <h6>Enroll in CPL Training</h6>
+                        <p>After passing DGCA Exams, enroll in an FTO in India or abroad to complete and obtain CPL.</p>
                       </div>
                     </div>
                   </div>
@@ -455,9 +452,8 @@
                       style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInLeft;">
 
                       <div class="timeline-text">
-                        <h6>Complete Flight Hours and Exams</h6>
-                        <p>For a commercial pilot license, fulfill 200 flight hours with 100 solo and 50 cross-country
-                          hours, passing DGCA exams. PPL requires 40-50 hours.</p>
+                        <h6>Conversion to DGCA CPL</h6>
+                        <p>If training done abroad, convert foreign license to DGCA CPL.</p>
                       </div>
                     </div>
                   </div>
@@ -478,9 +474,8 @@
                       style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInLeft;">
 
                       <div class="timeline-text">
-                        <h6>Obtain a Commercial Pilot Licence</h6>
-                        <p>Apply for a commercial pilot license from the DGCA after meeting flight hour, exam, and
-                          medical requirements, including age criteria.</p>
+                        <h6>Type Rating</h6>
+                        <p>After obtaining a DGCA CPL, enroll in a TRTO and complete type rating in an aircraft depending on the market requirements.</p>
                       </div>
                     </div>
                   </div>
@@ -501,9 +496,8 @@
                       style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInLeft;">
 
                       <div class="timeline-text">
-                        <h6>Build Flight Experience</h6>
-                        <p>Gain experience as a co-pilot for at least 250 hours after obtaining your commercial pilot
-                          license before applying for a pilot-in-command position.</p>
+                        <h6>Airline Preparation</h6>
+                        <p>After endorsement of type rating, start preparing for Airline selections and achieve your dream job.</p>
                       </div>
                     </div>
                   </div>
