--- a/adynamics3/inidvidual-clases/cpltunisia.html
+++ b/adynamics3/inidvidual-clases/cpltunisia.html
@@ -9,7 +9,7 @@
   <meta content="" name="description" />
 
   <!-- Favicon -->
-  <link href="../img/favicon.ico" rel="icon" />
+  <link href="img/favicon.ico" rel="icon" />
 
   <!-- Google Web Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -26,24 +26,24 @@
 
   <!-- Customized Bootstrap Stylesheet -->
   <link href="../css/bootstrap.min.css" rel="stylesheet" />
-
+  <link rel="stylesheet" href="../css2/style.css">
   <!-- Template Stylesheet -->
   <link href="../css/style.css" rel="stylesheet" />
-  <link rel="stylesheet" href="../css/course-details.css" />
-  <link rel="stylesheet" href="../css/hero.css">
   <link rel="stylesheet" href="../css2/style.css">
+  <link rel="stylesheet" href="../css/course-details.css" />
   <link rel="stylesheet" href="../check.css">
+  <link rel="stylesheet" href="../css/hero.css" />
 </head>
 
 <body>
 
-  <div class="demo-class">
-    <iframe src="https://www.youtube.com/embed/lKr-EdxFhnM?si=rVfbLDS_tgJVAEvE" id="player" title="YouTube video player"
-      frameborder="0"
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-      referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    <button class="close-demo-class" onclick="closeDemoClass()"><i class="fa fa-times"></i></button>
-  </div>
+    <div class="demo-class">
+        <iframe src="https://www.youtube.com/embed/lKr-EdxFhnM?si=rVfbLDS_tgJVAEvE" id="player"
+          title="YouTube video player" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <button class="close-demo-class" onclick="closeDemoClass()"><i class="fa fa-times"></i></button>
+      </div>
   <!-- Navbar Start -->
   <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
     <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
@@ -95,7 +95,8 @@
               <p class="text-xl">WELCOME TO ADYNAMICS</p>
             </strong>
             <h1 class="pt- display-6">
-              Mumbai NO.1 Rated Online Flying Aviation Training Center
+
+              Embark on your pilot journey with OACA CPL; A320 CPL Training in Tunisia
             </h1>
 
             <div class="btn-group">
@@ -147,31 +148,45 @@
         </h2>
         <div class="row gy-5 gx-4 mx-auto">
           <div class="col-sm-6 wow fadeIn" data-wow-delay="0.1s" style="
-                      visibility: visible;
-                      animation-delay: 0.1s;
-                      animation-name: fadeIn;
-                    ">
+                visibility: visible;
+                animation-delay: 0.1s;
+                animation-name: fadeIn;
+              ">
             <div class="d-flex align-items-center mb-3 imPart-bg border-r8">
               <div class="flex-shrink-0 btn-square bg-primary me-3 border-r8">
                 <i class="fa fa-check text-white"></i>
               </div>
-              <h5 class="mb-0">
-                A320 Pre Type Rating</h5>
+              <h5 class="mb-0"> SACAA CPL</h5>
             </div>
+
             <div class="accordion" id="accordion">
               <div class="accordion-item">
                 <h2 class="accordion-header" id="headingOne">
                   <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
                     aria-expanded="true" aria-controls="collapseOne">
-                    <b>Aircraft Systems</b>
+                    <b>Private Pilot License (PPL)</b>
                   </button>
                 </h2>
                 <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
                   data-bs-parent="#accordion">
                   <div class="accordion-body">
-                    Gain comprehensive knowledge of the intricate systems that make up the A320
-                    aircraft, including its
-                    electrical, hydraulic, and pneumatic systems.
+                    <ul>
+                      <li>
+                        45hrs Dual Flying ​
+                      </li>
+                      <li>
+                        15hrs Solo
+                      </li>
+                      <li>
+                        5hrs Simulator
+                      </li>
+                      <li>
+                        Ground Schooling
+                      </li>
+                      <li>
+                        20hrs Briefing/ De-briefing
+                      </li>
+                    </ul>
                   </div>
                 </div>
               </div>
@@ -179,15 +194,23 @@
                 <h2 class="accordion-header" id="headingTwo">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                    <b>Flying Techniques</b>
+                    <b>Night Rating (NR)</b>
                   </button>
                 </h2>
                 <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                   data-bs-parent="#accordion">
                   <div class="accordion-body">
-                    Learn the fundamental flying techniques specific to the A320, including takeoff,
-                    landing, and
-                    maneuvering in various flight conditions.
+                    <ul>
+                      <li>
+                        10hrs Dual Flying ​
+                      </li>
+                      <li>
+                        Ground Schooling
+                      </li>
+                      <li>
+                        5hrs Briefing/ De-briefing
+                      </li>
+                    </ul>
                   </div>
                 </div>
               </div>
@@ -195,15 +218,20 @@
                 <h2 class="accordion-header" id="headingThree">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                    <b>Flow Patterns</b>
+                    <b>Time Building</b>
                   </button>
                 </h2>
                 <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
                   data-bs-parent="#accordion">
                   <div class="accordion-body">
-                    Master the systematic flow patterns used in cockpit operations, ensuring
-                    efficient and accurate
-                    execution of procedures during flight.
+                    <ul>
+                      <li>
+                        4hrs Dual Flying
+                      </li>
+                      <li>
+                        85hrs Solo
+                      </li>
+                    </ul>
                   </div>
                 </div>
               </div>
@@ -211,15 +239,29 @@
                 <h2 class="accordion-header" id="headingFour">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                    <b>Sequences</b>
+                    <b>​Instrument Rating (IR) & Multi Engine Prep</b>
                   </button>
                 </h2>
                 <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
                   data-bs-parent="#accordion">
                   <div class="accordion-body">
-                    Understand the sequential order of actions and tasks required for different
-                    flight phases, from
-                    pre-flight checks to post-flight shutdown procedures.
+                    <ul>
+                      <li>
+                        15hrs Dual Single Engine Flying ​
+                      </li>
+                      <li>
+                        11.5hrs Dual Multi Engine Flying ​
+                      </li>
+                      <li>
+                        15hrs Simulator
+                      </li>
+                      <li>
+                        Ground Schooling
+                      </li>
+                      <li>
+                        5hrs Briefing/ De-briefing
+                      </li>
+                    </ul>
                   </div>
                 </div>
               </div>
@@ -227,15 +269,20 @@
                 <h2 class="accordion-header" id="headingFive">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                    <b>Procedures</b>
+                    <b>Single Engine Add on (SEA CPL)</b>
                   </button>
                 </h2>
                 <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive"
                   data-bs-parent="#accordion">
                   <div class="accordion-body">
-                    Familiarize yourself with the standard operating procedures (SOPs) and protocols
-                    specific to the A320,
-                    ensuring safe and efficient operation of the aircraft.
+                    <ul>
+                      <li>
+                        3hrs Dual Flying ​
+                      </li>
+                      <li>
+                        5hrs Briefing/ De-briefing
+                      </li>
+                    </ul>
                   </div>
                 </div>
               </div>
@@ -243,43 +290,67 @@
                 <h2 class="accordion-header" id="headingSix">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
-                    <b>MCDU Preparation</b>
+                    <b>Commercial Pilot License Multi Engine (CPL ME)</b>
                   </button>
                 </h2>
                 <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix"
                   data-bs-parent="#accordion">
                   <div class="accordion-body">
-                    Acquire proficiency in using the Multi-Function Control and Display Unit (MCDU),
-                    a critical component
-                    for managing flight plans, performance calculations, and system configurations.
-                  </div>
-                </div>
-              </div>
-              <div class="accordion-item">
-                <h2 class="accordion-header" id="headingSeven">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
-                    <b>Comprehensive Notes</b>
-                  </button>
-                </h2>
-                <div id="collapseSeven" class="accordion-collapse collapse" aria-labelledby="headingSeven"
-                  data-bs-parent="#accordion">
-                  <div class="accordion-body">
-                    Access detailed notes for the Flight Crew Operating Manual (FCOM), Flight Crew
-                    Training Manual (FCTM),
-                    and Quick Reference Handbook (QRH), serving as valuable references throughout
-                    your training journey.
+                    <ul>
+                      <li>
+                        3.5hrs Dual Multi Engine Flying ​ ​
+                      </li>
+                      <li>
+                        1hrs Simulator
+                      </li>
+                    </ul>
                   </div>
                 </div>
               </div>
             </div>
           </div>
           <div class="col-sm-6 wow fadeIn" data-wow-delay="0.2s" style="
-                      visibility: visible;
-                      animation-delay: 0.2s;
-                      animation-name: fadeIn;
-                    ">
+                visibility: visible;
+                animation-delay: 0.2s;
+                animation-name: fadeIn;
+              ">
+            <div class="d-flex align-items-center mb-3 imPart-bg border-r8">
+              <div class="flex-shrink-0 btn-square bg-primary me-3 border-r8">
+                <i class="fa fa-check text-white"></i>
+              </div>
+              <h5 class="mb-0">Prerequisite for Program:</h5>
+            </div>
+            <ol class="list-group list-group-light list-group-numbered">
+              <li class="list-group-item d-flex justify-content-between align-items-start" style="border: none">
+                <div class="ms-2 me-auto">
+                  <div class="fw-bold">12th Standard</div>
 
+                </div>
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-start" style="border: none">
+                <div class="ms-2 me-auto">
+                  <div class="fw-bold">
+                    18 years Age
+
+
+                  </div>
+
+                </div>
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-start" style="border: none">
+                <div class="ms-2 me-auto">
+                  <div class="fw-bold">Current SACAA Class 1 Medical</div>
+                </div>
+              </li>
+
+            </ol>
+          </div>
+
+          <div class="col-12 wow fadeInUp col-lg-6" data-wow-delay="0.5s" style="
+                visibility: visible;
+                animation-delay: 0.5s;
+                animation-name: fadeInUp;
+              ">
             <div class="imPart-bg p-3 border-r10">
               <h6 class="text-primary text-uppercase mb-2">Appointment</h6>
               <h5 class="mb-4">Make An Appointment now</h5>
@@ -329,11 +400,8 @@
               </form>
             </div>
           </div>
-
-
         </div>
       </div>
-    </div>
     </div>
   </section>
   <!-- topics section  -->
@@ -632,6 +700,11 @@
     </div>
 
   </footer>
+
+  <!-- Footer End -->
+
+  <!-- Copyright Start -->
+
   <!-- Copyright End -->
 
   <!-- Back to Top -->
@@ -645,10 +718,11 @@
   <script src="../lib/waypoints/waypoints.min.js"></script>
   <script src="../lib/owlcarousel/owl.carousel.min.js"></script>
 
-  <!-- Template Javascript -->
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
+
+  <!-- Template Javascript -->
   <script src="../js/main.js"></script>
 </body>
 
