to chnage file path

--- a/adynamics3/inidvidual-clases/CONVESION.html
+++ b/adynamics3/inidvidual-clases/CONVESION.html
@@ -57,7 +57,7 @@
             
 
             <div class="dropdown">
-              <a href="/adynamics3/testComponents/clasess.html" class="nav-item nav-link nav-dropdown ">Classes</a>
+              <a href="../testComponents/clasess.html" class="nav-item nav-link nav-dropdown ">Classes</a>
               <div class="dropdown-menu">
                 <a href="../inidvidual-clases/pretyping.html">A320 Pre Type Rating Class</a>
                 <a href="../course-details.html">DGca CPL Classes</a>
