--- a/adynamics3/jj.html
+++ b/adynamics3/jj.html
@@ -259,7 +259,7 @@
       </div>
 
   
-  <figure class="has-before hero-banner" style="--width: 1050; --height: 1050; margin-left:40px; padding: 0px;">
+  <figure class="has-before hero-banner che" style="--width: 1050; --height: 1050;  padding: 0px;">
     <img src="./img/hero-pilot.jpg" width="400px" height="100px" alt="hero banner" class="img-cover  hero-banner resize"
       style="border-radius: 50%; width: 100%;  ">
   </figure>
