add the proposed changes

--- a/adynamics3/testComponents/cource-aboutpage.html
+++ b/adynamics3/testComponents/cource-aboutpage.html
@@ -767,7 +767,7 @@
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="../assets/img/hollywood-sign-grainy-hd-v75tqeuilgi7q0a9.jpg" class="d-block w-100"
+                    <img src="../assets/img/63e4367714ad0b4cbd566ac387f6780e.jpg" class="d-block w-100"
                         alt="...">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center bottom-0">
                         <h2 class="bg-opacity-50 py-2 px-4">CPL Training in USA</h2>
@@ -779,7 +779,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="../assets/img/south-africa-1755-x-1080-picture-515wwhor3xxnbfvq (1).jpg"
+                    <img src="../assets/img/South-Africa-Country-Outline.jpg"
                         class="d-block w-100" alt="...">
                     <div
                         class="carousel-caption d-flex flex-column align-items-center justify-content-center bottom-0 ">
@@ -787,6 +787,54 @@
                         <p class="bg-opacity-50 py-2 px-4">Some representative placeholder content for the second slide.
                         </p>
                         <a href="../inidvidual-clases/cplsouth.html"
+                            class="btn btn-outline-dark px-4 py-2 rounded-0">Learn More</a>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="../assets/img/3d86015cc137b1c17239ba93de4256c5.jpg"
+                        class="d-block w-100" alt="...">
+                    <div
+                        class="carousel-caption d-flex flex-column align-items-center justify-content-center bottom-0 ">
+                        <h2 class="bg-opacity-50 py-2 px-4">CPL Training in India</h2>
+                        <p class="bg-opacity-50 py-2 px-4">Some representative placeholder content for the second slide.
+                        </p>
+                        <a href="../inidvidual-clases/CONVESION.html`"
+                            class="btn btn-outline-dark px-4 py-2 rounded-0">Learn More</a>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="../assets/img/Tunisia-Country-Outline.jpg"
+                        class="d-block w-100" alt="...">
+                    <div
+                        class="carousel-caption d-flex flex-column align-items-center justify-content-center bottom-0 ">
+                        <h2 class="bg-opacity-50 py-2 px-4">CPL Training in Tunisia</h2>
+                        <p class="bg-opacity-50 py-2 px-4">Some representative placeholder content for the second slide.
+                        </p>
+                        <a href="../inidvidual-clases/cpltunisia.html"
+                            class="btn btn-outline-dark px-4 py-2 rounded-0">Learn More</a>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="../assets/img/Morocco-Country-Outline (1).jpg"
+                        class="d-block w-100" alt="...">
+                    <div
+                        class="carousel-caption d-flex flex-column align-items-center justify-content-center bottom-0 ">
+                        <h2 class="bg-opacity-50 py-2 px-4">CPL Training in Morocco</h2>
+                        <p class="bg-opacity-50 py-2 px-4">Some representative placeholder content for the second slide.
+                        </p>
+                        <a href="../inidvidual-clases/cplmorocco.html"
+                            class="btn btn-outline-dark px-4 py-2 rounded-0">Learn More</a>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="../assets/img/Argentina-Country-Outline.jpg"
+                        class="d-block w-100" alt="...">
+                    <div
+                        class="carousel-caption d-flex flex-column align-items-center justify-content-center bottom-0 ">
+                        <h2 class="bg-opacity-50 py-2 px-4">CPL Training in Argentina</h2>
+                        <p class="bg-opacity-50 py-2 px-4">Some representative placeholder content for the second slide.
+                        </p>
+                        <a href="../inidvidual-clases/cplargentina.html"
                             class="btn btn-outline-dark px-4 py-2 rounded-0">Learn More</a>
                     </div>
                 </div>
