--- a/adynamics3/jj.html
+++ b/adynamics3/jj.html
@@ -260,7 +260,7 @@
 
   
   <figure class="has-before hero-banner che" style="--width: 1050; --height: 1050;  padding: 0px;">
-    <img src="./img/hero-pilot.jpg" width="400px" height="100px" alt="hero banner" class="img-cover  hero-banner resize"
+    <img src="./img/check.JPG" width="400px" height="100px" alt="hero banner" class="img-cover  hero-banner resize"
       style="border-radius: 50%; width: 100%;  ">
   </figure>
 
@@ -1291,7 +1291,7 @@
           <div class="carousel-inner">
             <div class="carousel-item active">
               <div class="row justify-content-center testimonia-bg py-5 personal">
-                <div class="col-lg-7 wow fadeInUp personail" data-wow-delay="0.1s">
+                <div class="col-lg-7   personail" data-wow-delay="0.1s">
                   <div class="employee_name">
                     <h5>Client Name</h5>
                     <span>Profession</span>
@@ -1302,7 +1302,7 @@
                     quibusdam quisquam, quae, temporibus dolores porro doloribus."
                   </p>
                 </div>
-                <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.3s">
+                <div class="col-lg-5  " data-wow-delay="0.3s">
                   <video autoplay controls muted loop>
                     <source src="/adynamics3/assets/video/Testimonial 1.mov" type="video/mp4">
                   </video>
@@ -1311,7 +1311,7 @@
             </div>
             <div class="carousel-item">
               <div class="row justify-content-center testimonia-bg py-5 personal">
-                <div class="col-lg-7 wow fadeInUp personail" data-wow-delay="0.1s">
+                <div class="col-lg-7   personail" data-wow-delay="0.1s">
                   <div class="employee_name">
                     <h5>Client Name</h5>
                     <span>Profession</span>
@@ -1322,7 +1322,7 @@
                     quibusdam quisquam, quae, temporibus dolores porro doloribus."
                   </p>
                 </div>
-                <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.3s">
+                <div class="col-lg-5  " data-wow-delay="0.3s">
                   <video autoplay controls muted loop>
                     <source src="/adynamics3/assets/video/Testimonial 1.mov" type="video/mp4">
                   </video>
@@ -1331,7 +1331,7 @@
             </div>
             <div class="carousel-item">
               <div class="row justify-content-center testimonia-bg py-5 personal">
-                <div class="col-lg-7 wow fadeInUp personail" data-wow-delay="0.1s">
+                <div class="col-lg-7   personail" data-wow-delay="0.1s">
                   <div class="employee_name">
                     <h5>Client Name</h5>
                     <span>Profession</span>
@@ -1342,7 +1342,7 @@
                     quibusdam quisquam, quae, temporibus dolores porro doloribus."
                   </p>
                 </div>
-                <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.3s">
+                <div class="col-lg-5  " data-wow-delay="0.3s">
                   <video autoplay controls muted loop>
                     <source src="/adynamics3/assets/video/Testimonial 1.mov" type="video/mp4">
                   </video>
