--- a/adynamics3/testComponents/cource-aboutpage.html
+++ b/adynamics3/testComponents/cource-aboutpage.html
@@ -798,7 +798,7 @@
                         <h2 class="bg-opacity-50 py-2 px-4">CPL Training in India</h2>
                         <p class="bg-opacity-50 py-2 px-4">Some representative placeholder content for the second slide.
                         </p>
-                        <a href="../inidvidual-clases/CONVESION.html`"
+                        <a href="../inidvidual-clases/CONVESION.html"
                             class="btn btn-outline-dark px-4 py-2 rounded-0">Learn More</a>
                     </div>
                 </div>
